--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,7 +30,7 @@ a {
 :root {
   ::-webkit-scrollbar {
     width: 5px;
-    height: 10px;
+    height: 12px;
   }
   &.dark {
     ::-webkit-scrollbar-thumb {
@@ -41,10 +41,10 @@ a {
     }
   }
   ::-webkit-scrollbar-thumb {
-    background: black ;
+    background: theme('colors.hells-gold.300') ;
   }
   ::-webkit-scrollbar-thumb:hover {
-    background-color: black ;
+    background-color: theme('colors.hells-gold.300')  ;
   }
 }
 
